Fix some UI overlap issues

--- a/crates/cli/src/serve/static/styles.css
+++ b/crates/cli/src/serve/static/styles.css
@@ -36,16 +36,21 @@ body {
 }
 
 #latest {
-    max-width: 90%;
-    max-height: 90%;
-    box-shadow: 5px 5px 20px black;
-    margin: 2em;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 2em;
 }
 
-.light #latest {
+#latest object {
+    max-width: 100%;
+    max-height: 100%;
+    box-shadow: 5px 5px 20px black;
+}
+
+.light #latest object {
     background-color: white;
 }
-.dark #latest {
+.dark #latest object {
     background-color: black;
 }
 
@@ -84,6 +89,15 @@ fieldset {
 #user-consts label {
     font-family: monospace;
     white-space: pre;
+}
+
+.user-const {
+    width: 100%;
+}
+
+.user-const input {
+    min-width: 1em;
+    flex: 1;
 }
 
 #logs {
